--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
-    "cypress": "^13.6.1"
+    "cypress": "^13.6.1",
+    "cypress-mochawesome-reporter": "^3.8.2"
   }
 }
