--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf ./reports/html",
+    "cypress:run": "npx cypress run --env allure=true"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,8 @@
     "@faker-js/faker": "^8.3.1",
     "cypress": "^13.6.1",
     "cypress-mochawesome-reporter": "^3.8.2"
+  },
+  "dependencies": {
+    "@shelex/cypress-allure-plugin": "^2.40.2"
   }
 }
