--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean": "rimraf ./reports/html",
-    "cypress:run": "npx cypress run --env allure=true"
+    "allure-chro": "cypress run --browser chrome --env allure=true",
+    "allure-fire": "npx cypress run --browser firefox --env allure=true",
+    "allure:repo": "allure generate allure-results --clean -o allure-report",
+    "allure:clea": "rm -r allure-results/ allure-report cypress/screenshots || true"
   },
   "keywords": [],
   "author": "",
