--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,16 +24,8 @@ jobs:
       - name: Install Faker API
         run: npm install @faker-js/faker --save-dev
 
-      - name: Set Cypress environment variables
-        run: echo "export CYPRESS_email=$(jq -r '.email' cypress.env.json) && export CYPRESS_password=$(jq -r '.senha' cypress.env.json)" >> $GITHUB_ENV
-
-      - name: Debug Environment Variables
-        run: |
-          echo "Email: $CYPRESS_email"
-          echo "Password: $CYPRESS_password"
-
       - name: Run Cypress
-        run: npx cypress run --env email=$CYPRESS_email,senha=$CYPRESS_password
+        run: npx cypress run --env email="$cypress_email",senha="$cypress_password"
 
       - name: Generate Allure reports
         run: npm run allure:generate
