--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Run Cypress
         env:
-          CYPRESS_EMAIL: ${{ secrets.cypress_email }}
-          CYPRESS_PASSWORD: ${{ secrets.cypress_senha }}
+          CYPRESS_EMAIL: ${{ secrets.CYPRESS_EMAIL }}
+          CYPRESS_PASSWORD: ${{ secrets.CYPRESS_PASSWORD }}
         run: npx cypress run
 
       - name: Generate Allure reports
