--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install @faker-js/faker --save-dev
 
       - name: Run Cypress
-        run: npx cypress open
+        run: npx cypress run
 
       - name: Generate Allure reports
         run: npm run allure:generate
