--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -7,7 +7,7 @@ on:
     
 jobs:
     cypress-run:
-        runs-on: ubunto-latest
+        runs-on: ubuntu-latest
 
         steps:
             - name: Checkout/Clone do projeto
