--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -12,5 +12,8 @@ jobs:
       - name: Checkout do repositório
         uses: actions/checkout@v3
 
+      - name: Instalar dependências do projeto
+        uses: npm install
+
       - name: Executar testes
         uses: cypress-io/github-actions@v5
