--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Instalar dependências do projeto
-        uses: npm install
+        run: npm install
 
       - name: Executar testes
         uses: cypress-io/github-actions@v5
