--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -22,3 +22,8 @@ jobs:
           name: cypress-videos
           path: cypress/videos
           if-no-files-found: ignore
+
+      - name: Run Cypress
+        env:
+            PASSWORD: ${{ secrets.PASSWORD }}
+        run: npx cypress run --env pwd="$PASSWORD"
