--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -27,5 +27,6 @@ jobs:
 
       - name: Run Cypress
         env:
+            EMAIL: ${{ secrets.EMAIL }}
             PASSWORD: ${{ secrets.PASSWORD }}
-        run: npx cypress run --env senha="$PASSWORD"
+        run: npx cypress run --env senha="$PASSWORD" --env email="$EMAIL"
