--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -25,10 +25,8 @@ jobs:
           path: cypress/videos
           if-no-files-found: ignore
 
-      - name: Set environment variables
-        run: |
-          echo "EMAIL=${{ secrets.EMAIL }}" >> $GITHUB_ENV
-          echo "PASSWORD=${{ secrets.PASSWORD }}" >> $GITHUB_ENV
-  
       - name: Run Cypress
-        run: npx cypress run --env senha="${{ secrets.PASSWORD }}" --env email="${{ secrets.EMAIL }}"
+        env:
+            EMAIL: ${{ secrets.EMAIL }}
+            PASSWORD: ${{ secrets.PASSWORD }}
+        run: npx cypress run --env email="$EMAIL" --env senha="$PASSWORD"
