--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -29,4 +29,4 @@ jobs:
         env:
             EMAIL: ${{ secrets.EMAIL }}
             PASSWORD: ${{ secrets.PASSWORD }}
-        run: npx cypress run --env email="$EMAIL" --env senha="$PASSWORD"
+        run: npx cypress run --env mail="$EMAIL" --env pwd="$PASSWORD"
