--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -27,7 +27,5 @@ jobs:
 
       - name: Run Cypress
         env:
-            EMAIL: ${{ secrets.EMAIL }}
             PASSWORD: ${{ secrets.PASSWORD }}
-        run: |
-          npx cypress run --env pwd="$PASSWORD" --env email="$EMAIL"
+        run: npx cypress run --env pwd="$PASSWORD"
