--- a/package.json
+++ b/package.json
@@ -4,20 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "allure-chro": "cypress run --browser chrome --env allure=true",
-    "allure-fire": "npx cypress run --browser firefox --env allure=true",
-    "allure:repo": "allure generate allure-results --clean -o allure-report",
-    "allure:clea": "rm -r allure-results/ allure-report cypress/screenshots || true"
+    "cy:run": "cypress run --config video=false --env allure=true",
+    "allure:report": "allure generate allure-results",
+    "allure:clear": "rm -r allure-results/ allure-report || true",
+    "allure:open": "allure open allure-report",
+    "test": "npx npm-run-all allure:clear cy:run allure:report"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
-    "cypress": "^13.6.1",
-    "cypress-mochawesome-reporter": "^3.8.2"
-  },
-  "dependencies": {
-    "@shelex/cypress-allure-plugin": "^2.40.2"
+    "@shelex/cypress-allure-plugin": "^2.40.2",
+    "cypress": "^12.2.0"
   }
 }
