--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -7,8 +7,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Run E2E testes Push
-        run: npm run test || true
+      - name: Cypress run
+        uses: cypress-io/github-action@v5
 
       - uses: actions/upload-artifact@v3
         if: failure()
