--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Cypress run
-        run: npm cypress run || true
+        run: npx cypress run || true
 
       - uses: actions/upload-artifact@v3
         if: failure()
