--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -4,11 +4,20 @@ jobs:
   cypress-run:
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Cypress run
+      - name: Checkout do código
+        uses: actions/checkout@v2
+  
+      - name: Configurar Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+  
+      - name: Install Dependencies
+        run: npm install
+  
+      - name: Run test
         run: npx cypress run || true
+  
 
       - uses: actions/upload-artifact@v3
         if: failure()
