--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -4,13 +4,13 @@ on:
   push:
     branches:
       - main
-
+      
   workflow_dispatch:
 
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
-    name: Cypress Test Run
+    name: build
     steps:
       - name: Checkout do código
         uses: actions/checkout@v2
@@ -32,4 +32,11 @@ jobs:
         with:
           name: cypress-screenshots
           path: cypress/screenshots
+          if-no-files-found: ignore
+          
+      - name: Upload Cypress Videos
+        uses: actions/upload-artifact@v3
+        with:
+          name: cypress-videos
+          path: cypress/videos
           if-no-files-found: ignore
