--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -1,41 +1,23 @@
 name: End-to-end tests
-
-on:
-  push:
-    branches:
-      - main
-      
-  workflow_dispatch:
-
+on: push
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
-    name: build
     steps:
-      - name: Checkout do código
-        uses: actions/checkout@v2
-  
-      - name: Configurar Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-  
-      - name: Install Dependencies
-        run: npm install
-  
-      - name: Run test
-        run: npx cypress run || true
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Upload Cypress Screenshots
+      - name: Cypress run
+        uses: cypress-io/github-action@v5
+
+      - uses: actions/upload-artifact@v3
         if: failure()
-        uses: actions/upload-artifact@v3
         with:
           name: cypress-screenshots
           path: cypress/screenshots
           if-no-files-found: ignore
           
-      - name: Upload Cypress Videos
-        uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v3
         with:
           name: cypress-videos
           path: cypress/videos
