atualizando os metodos de email e senha

--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -1,24 +1,26 @@
-name: End-to-end tests
-on: push
+name: CI
+
+on: [push]
 jobs:
-  cypress-run:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+    build-test:
+        runs-on: ubuntu-20.04
+        steps:
 
-      - name: Cypress run
-        uses: cypress-io/github-action@v5
+            - name: Checkout
+              uses: actions/checkout@v3
 
-      - uses: actions/upload-artifact@v3
-        if: failure()
-        with:
-          name: cypress-screenshots
-          path: cypress/screenshots
-          if-no-files-found: ignore
-          
-      - uses: actions/upload-artifact@v3
-        with:
-          name: cypress-videos
-          path: cypress/videos
-          if-no-files-found: ignore
+            - name: Cypress Tests 🧪
+              uses: cypress-io/github-action@v5
+              with:
+                start: 'npm run dev'
+                build: 'npm run build'
+                
+            - uses: actions/upload-artifact@v3
+              if: always()
+              with:
+                name: Cypress Result
+                path: |
+                    cypress/screenshots
+                    cypress/videos
+                    cypress/results
+                if-no-files-found: ignore
