--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -10,7 +10,7 @@ jobs:
               uses: actions/checkout@v3
 
             - name: Cypress Tests 🧪
-              uses: cypress-io/github-action@v5
+              uses: npx cypress run
                 
             - uses: actions/upload-artifact@v3
               if: always()
