--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -1,23 +1,24 @@
-name: CI
-
-on: [push]
+name: End-to-end tests
+on: push
 jobs:
-    build-test:
-        runs-on: ubuntu-20.04
-        steps:
+  cypress-run:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-            - name: Checkout
-              uses: actions/checkout@v3
+      - name: Cypress run
+        uses: cypress-io/github-action@v5
 
-            - name: Cypress Tests 🧪
-              uses: npx cypress run
-                
-            - uses: actions/upload-artifact@v3
-              if: always()
-              with:
-                name: Cypress Result
-                path: |
-                    cypress/screenshots
-                    cypress/videos
-                    cypress/results
-                if-no-files-found: ignore
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
+          if-no-files-found: ignore
+          
+      - uses: actions/upload-artifact@v3
+        with:
+          name: cypress-videos
+          path: cypress/videos
+          if-no-files-found: ignore
