--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -3,6 +3,9 @@ on: push
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
+    env:
+      USERNAME: ${{ secrets.EMAIL }}
+      PASSWORD: ${{ secrets.PASSWORD }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
