--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -4,8 +4,8 @@ jobs:
   cypress-run:
     runs-on: ubuntu-22.04
     env:
-      email: ${{ secrets.EMAIL }}
-      senha: ${{ secrets.SENHA }}
+      EMAIL: ${{ secrets.EMAIL }}
+      PASSWORD: ${{ secrets.SENHA }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
