--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -1,26 +1,40 @@
 name: End-to-end tests
-on: push
+
+on:
+  push:
+
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
-    env:
-      CYPRESS_EMAIL: ${{ secrets.CYPRESS_EMAIL }}
-      CYPRESS_SENHA: ${{ secrets.CYPRESS_SENHA }}
+
+    permissions:
+      contents: read
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Debug Secrets
+        run: |
+          echo "CYPRESS_EMAIL: ${{ secrets.CYPRESS_EMAIL }}"
+          echo "CYPRESS_SENHA: ${{ secrets.CYPRESS_SENHA }}"
+
       - name: Cypress run
         uses: cypress-io/github-action@v5
+        env:
+          CYPRESS_EMAIL: ${{ secrets.CYPRESS_EMAIL }}
+          CYPRESS_SENHA: ${{ secrets.CYPRESS_SENHA }}
 
-      - uses: actions/upload-artifact@v3
+      - name: Upload Cypress Screenshots
         if: failure()
+        uses: actions/upload-artifact@v3
         with:
           name: cypress-screenshots
           path: cypress/screenshots
           if-no-files-found: ignore
-          
-      - uses: actions/upload-artifact@v3
+
+      - name: Upload Cypress Videos
+        uses: actions/upload-artifact@v3
         with:
           name: cypress-videos
           path: cypress/videos
