--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -1,40 +1,34 @@
-name: End-to-end tests
+name: Cypress Tests
 
 on:
   push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+  workflow_dispatch:
+
+permissions:
+  contents: read
 
 jobs:
-  cypress-run:
-    runs-on: ubuntu-22.04
-
-    permissions:
-      contents: read
+  test:
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Debug Secrets
-        run: |
-          echo "CYPRESS_EMAIL: ${{ secrets.CYPRESS_EMAIL }}"
-          echo "CYPRESS_SENHA: ${{ secrets.CYPRESS_SENHA }}"
+      - name: Run Cypress tests
+        run: npx cypress run
 
-      - name: Cypress run
-        uses: cypress-io/github-action@v5
-        env:
-          CYPRESS_EMAIL: ${{ secrets.CYPRESS_EMAIL }}
-          CYPRESS_SENHA: ${{ secrets.CYPRESS_SENHA }}
-
-      - name: Upload Cypress Screenshots
+      - uses: actions/upload-artifact@v3
         if: failure()
-        uses: actions/upload-artifact@v3
         with:
           name: cypress-screenshots
           path: cypress/screenshots
           if-no-files-found: ignore
-
-      - name: Upload Cypress Videos
-        uses: actions/upload-artifact@v3
+          
+      - uses: actions/upload-artifact@v3
         with:
           name: cypress-videos
           path: cypress/videos
