--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -1,4 +1,4 @@
-name: Cypress Tests
+name: Cypress Tests and Allure Report
 
 on:
   push:
@@ -18,18 +18,53 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Run Cypress tests
-        run: npx cypress run
+      - name: Install dependencies
+        run: |
+          npm install
+          npm install -g allure-commandline
 
-      - uses: actions/upload-artifact@v3
-        if: failure()
+      - name: Clean Allure results
+        run: npm run allure:clear
+
+      - name: Run Cypress tests
+        run: npm test
+
+      - name: Generate report
+        run: npm run allure:report
+
+      - name: Test Report
+        uses: actions/upload-artifact@v4
+        if: always()
         with:
-          name: cypress-screenshots
-          path: cypress/screenshots
-          if-no-files-found: ignore
+            name: cypress-test-report
+            path: allure-report/
+
+  deploy:
+      name: Deploy GitHub Pages 🌐
+      runs-on: ubuntu-latest
+      needs: 
+        - test
+      permissions:
+        contents: read
+        pages: write
+        id-token: write
+      environment:
+        name: github-pages
+        url: https://marilliadantas.github.io/qazando-shop-cypress/index.html
+      steps:
+        - name: Setup Pages
+          uses: actions/configure-pages@v5
           
-      - uses: actions/upload-artifact@v3
-        with:
-          name: cypress-videos
-          path: cypress/videos
-          if-no-files-found: ignore
+        - name: Download Artifacts
+          uses: actions/download-artifact@v4
+          with: 
+            name: cypress-test-report
+          
+        - name: Upload artifact
+          uses: actions/upload-pages-artifact@v3
+          with:
+              path: ./
+          
+        - name: Deploy to Github Pages
+          id: deployment
+          uses: actions/deploy-pages@v4
