--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "cy:run": "cypress run --config video=false --env allure=true",
+    "test": "npx cypress run --config video=false --env allure=true || true",
     "allure:report": "allure generate allure-results",
     "allure:clear": "rm -r allure-results/ allure-report || true",
-    "allure:open": "allure open allure-report",
-    "test": "npx npm-run-all allure:clear cy:run allure:report"
+    "test:cy": "npm run allure:clear && npm run e2e && npm run allure:report"
   },
   "keywords": [],
   "author": "",
