--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -23,10 +23,9 @@ jobs:
           npm install
           npm install -g allure-commandline
 
-      - name: Substituir valores do arquivo cypress.env.json pelas secrets
+      - name: Criar arquivo cypress.env.json
         run: |
-          sed -i 's/"CYPRESS_EMAIL"/"${{ secrets.CYPRESS_EMAIL }}"/' cypress.env.json
-          sed -i 's/"CYPRESS_SENHA"/"${{ secrets.CYPRESS_SENHA }}"/' cypress.env.json
+            echo "{\"CYPRESS_EMAIL\": \"${{ secrets.CYPRESS_EMAIL }}\", \"CYPRESS_SENHA\": \"${{ secrets.CYPRESS_SENHA }}\"}" > cypress.env.json
 
       - name: Clean Allure results
         run: npm run allure:clear
