--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ cypress.env.json
 cypress/fixtures
 cypress/reports/
 ci.yml
+ci-multibrowser.yml
+ci.simples.yml
 exemplo-pipe.yml
 package.json
 package-lock.json
