--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -15,59 +15,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Install dependencies
-        run: |
-          npm install
-          npm install -g allure-commandline
-
-      - name: Clean Allure results
-        run: npm run allure:clear
-
-      - name: Run Cypress tests
-        env:
-          CYPRESS_EMAIL: ${{ secrets.CYPRESS_EMAIL }}
-          CYPRESS_SENHA: ${{ secrets.CYPRESS_SENHA }}
-        run: npm test
-
-      - name: Generate report
-        run: npm run allure:report
-
-      - name: Test Report
-        uses: actions/upload-artifact@v4
-        if: always()
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Cypress run
+        uses: cypress-io/github-action@v1
         with:
-            name: cypress-test-report
-            path: allure-report/
+            env: true
+        env:
+            email: ${{ secrets.email }}
+            senha: ${{ secrets.senha }}
 
-  deploy:
-      name: Deploy GitHub Pages 🌐
-      runs-on: ubuntu-latest
-      needs: 
-        - test
-      permissions:
-        contents: read
-        pages: write
-        id-token: write
-      environment:
-        name: github-pages
-        url: https://marilliadantas.github.io/qazando-shop-cypress/index.html
-      steps:
-        - name: Setup Pages
-          uses: actions/configure-pages@v5
-          
-        - name: Download Artifacts
-          uses: actions/download-artifact@v4
-          with: 
-            name: cypress-test-report
-          
-        - name: Upload artifact
-          uses: actions/upload-pages-artifact@v3
-          with:
-              path: ./
-          
-        - name: Deploy to Github Pages
-          id: deployment
-          uses: actions/deploy-pages@v4
