--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -20,8 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install
-          npm install -g allure-commandline
+          npm install-dependencies
 
       - name: Clean Allure results
         run: npm run allure:clear
