--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx cypress run --config video=false --env allure=true || true",
+    "test": "npx cypress run --config video=false --env allure=true --browser chrome --headless || true",
     "allure:report": "allure generate allure-results",
     "allure:clear": "rm -r allure-results/ allure-report || true",
-    "test:cy": "npm run allure:clear && npm run e2e && npm run allure:report"
+    "test:cy": "npm run allure:clear && npm run test && npm run allure:report"
   },
   "keywords": [],
   "author": "",
