--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run Cypress tests
         env:
           PASSWORD: ${{ secrets.PASSWORD }}
-        run: npm test || true
+        run: npm test
 
       - name: Generate report
         run: npm run allure:report
