--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx cypress run --config video=false --env allure=truem, senha=\"$PASSWORD\" --browser chrome --headless || true",
+    "test": "npx cypress run --config video=false --env allure=true, senha=\"$PASSWORD\" --browser chrome --headless || true",
     "allure:report": "allure generate allure-results",
     "allure:clear": "rm -r allure-results/ allure-report || true",
     "test:cy": "npm run allure:clear && npm run test && npm run allure:report"
