--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -7,9 +7,9 @@ on:
     branches: [main]
   workflow_dispatch:
 
-  schedule:
-    - cron: '50 13 * * *'
-    - cron: '00 14 * * *'
+  # schedule:
+  #   - cron: '50 13 * * *'
+  #   - cron: '00 14 * * *'
 
 permissions:
   contents: read
