--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -70,5 +70,8 @@ jobs:
         - name: Deploy to GitHub Pages
           id: deployment
           uses: actions/deploy-pages@v4
+        
+        - name: Set deployment status with URL
+          run: ${{ secrets.URL }}
           env:
-              DEPLOY_URL: ${{ secrets.URL }}
+            DEPLOY_URL: ${{ secrets.URL }}
