--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -53,6 +53,7 @@ jobs:
         id-token: write
       environment:
         name: github-pages
+        url: https://marilliadantas.github.io/qazando-shop-cypress/index.html
       steps:
         - name: Setup Pages
           uses: actions/configure-pages@v5
@@ -67,11 +68,6 @@ jobs:
           with:
               path: ./
       
-        - name: Deploy to GitHub Pages
+        - name: Deploy to Github Pages
           id: deployment
           uses: actions/deploy-pages@v4
-        
-        - name: Set deployment status with URL
-          run: ${{ secrets.URL }}
-          env:
-            DEPLOY_URL: ${{ secrets.URL }}
